igw.tf
# Creating Internet Gateway
resource "aws_internet_gateway" "demogateway" {
 vpc_id = "${aws_vpc.demovpc.id}"
}
